AS2/compiling_error.txt
/Users/BICKLEY/code/cs/comsc110/AS2/2d-math-tutor.cpp:21:10: error: no matching constructor for initialization of 'string' (aka 'basic_string<char, char_traits<char>, allocator<char> >')
  string lineBreak(8, "_")
         ^         ~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:786:5: note: candidate constructor not viable: no known conversion from 'const char [2]' to 'value_type' (aka 'char') for 2nd argument
    basic_string(size_type __n, value_type __c);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:764:5: note: candidate constructor not viable: no known conversion from 'int' to 'const std::__1::basic_string<char>' for 1st argument
    basic_string(const basic_string& __str, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:780:5: note: candidate constructor not viable: no known conversion from 'int' to 'const value_type *' (aka 'const char *') for 1st argument
    basic_string(const value_type* __s, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:782:5: note: candidate constructor not viable: no known conversion from 'int' to 'const value_type *' (aka 'const char *') for 1st argument
    basic_string(const value_type* __s, size_type __n);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:792:5: note: candidate constructor not viable: no known conversion from 'int' to 'const std::__1::basic_string<char>' for 1st argument
    basic_string(const basic_string& __str, size_type __pos,
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:801:5: note: candidate constructor not viable: no known conversion from 'int' to '__self_view' (aka 'basic_string_view<char, std::__1::char_traits<char> >') for 1st argument
    basic_string(__self_view __sv, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:804:9: note: candidate template ignored: deduced conflicting types for parameter '_InputIterator' ('int' vs. 'const char *')
        basic_string(_InputIterator __first, _InputIterator __last);
        ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:795:9: note: candidate constructor template not viable: requires at least 3 arguments, but 2 were provided
        basic_string(const _Tp& __t, size_type __pos, size_type __n, 
        ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:807:9: note: candidate constructor template not viable: requires 3 arguments, but 2 were provided
        basic_string(_InputIterator __first, _InputIterator __last, const allocator_type& __a);
        ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:756:40: note: candidate constructor not viable: requires single argument '__a', but 2 arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit basic_string(const allocator_type& __a)
                                       ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:763:5: note: candidate constructor not viable: requires single argument '__str', but 2 arguments were provided
    basic_string(const basic_string& __str);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:778:31: note: candidate constructor not viable: requires single argument '__s', but 2 arguments were provided
    _LIBCPP_INLINE_VISIBILITY basic_string(const value_type* __s);
                              ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:799:5: note: candidate constructor not viable: requires single argument '__sv', but 2 arguments were provided
    basic_string(__self_view __sv);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:784:5: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
    basic_string(const value_type* __s, size_type __n, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:788:5: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
    basic_string(size_type __n, value_type __c, const allocator_type& __a);
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:753:31: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
    _LIBCPP_INLINE_VISIBILITY basic_string()
                              ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:789:5: note: candidate constructor not viable: requires at least 3 arguments, but 2 were provided
    basic_string(const basic_string& __str, size_type __pos, size_type __n,
    ^
/Users/BICKLEY/code/cs/comsc110/AS2/2d-math-tutor.cpp:21:27: error: expected ';' at end of declaration
  string lineBreak(8, "_")
                          ^
                          ;
2 errors generated.
